- Fix unnecessary spacing on home page - Show hint for architects with no systems

--- a/src/views/Commander/Commander.css
+++ b/src/views/Commander/Commander.css
@@ -1,7 +1,3 @@
-.cmdr-projects .header {
-  padding: 8px 8px 4px 8px;
-}
-
 .cmdr-projects .commodity {
   width: 275px;
   padding: 0 8px 0 8px;
